feat: Update project dependencies and configuration
This commit updates various project dependencies and configurations to align with newer versions and best practices. Key changes include:
- Renaming the project package name.
- Updating Vite, React, and other library versions.
- Adjusting TypeScript compiler options.
- Simplifying Vite configuration.
- Enabling Tailwind CSS via CDN for development.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>啸仙丹心 - 玩家体验调研</title>
+    <!-- Tailwind CSS (Using CDN for simplicity in this setup, normally would use PostCSS in build) -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
@@ -56,12 +57,15 @@
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "recharts": "https://aistudiocdn.com/recharts@^3.5.0",
-    "qrcode.react": "https://esm.sh/qrcode.react@4.0.1?external=react,react-dom"
+    "vite": "https://aistudiocdn.com/vite@^7.2.4",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
+    "qrcode.react": "https://aistudiocdn.com/qrcode.react@^4.2.0"
   }
 }
 </script>
 </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
